--- a/_sass/moving/_base.scss
+++ b/_sass/moving/_base.scss
@@ -24,11 +24,17 @@ figure {
 /**
   * Basic styling
   */
+html {
+background-size: 100% 100%;
+background-position: 0px 0px,0px 0px,0px 0px,0px 0px;
+background-image: radial-gradient(70% 53% at 36% 76%, #73F2FFFF 0%, #073AFF00 100%),radial-gradient(42% 53% at 15% 94%, #073AFF00 5%, #FFFFFFFF 7%),radial-gradient(31% 43% at 7% 98%, #FFFFFFFF 24%, #073AFF00 100%),linear-gradient(125deg, #4EB5FFFF 1%, #4C00FCFF 100%);
+}
 body {
   font: $base-font-weight #{$small-font-size}/#{$small-line-height}
     $base-font-family;
+  font-family: Menlo, Monaco, Consolas, Liberation Mono, Lucida Console, monospace; 
   color: $text-color;
-  background-color: $background-color;
+  /* background-color: $background-color;  */
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
   -moz-font-feature-settings: "kern" 1;
