fix <- url back Home link in liquid

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,8 +15,8 @@ layout: default
   </head>
   <header class="post-header">
     <div class="post-back">
-      <a class="black-link" href="{{ site.url | relative_url }}">
-        ← {{ site.moving.back_to }}
+      <a class="black-link" href="{{ site.url }}{{ site.baseurl }}">
+        ← Home
       </a>
     </div>
 
